--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ version: 2.1
 jobs:
   build: 
     docker:
-       - image: circleci/node:18.8.0
+       - image: cimg/node:18.8.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -46,7 +46,7 @@ jobs:
 
   deploy-to-aws-s3:
     docker:
-      - image: circleci/node:18.8.0
+      - image: cimg/node:18.8.0
     working_directory: ~/repo
     steps:
       - checkout
@@ -83,7 +83,7 @@ jobs:
 
   deploy-to-aws-cloudfront:
     docker:
-      - image: circleci/node:18.8.0
+      - image: cimg/node:18.8.0
     working_directory: ~/repo
     steps:
       - checkout
