--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command: echo ${CURRENT_BRANCH}
+          command: echo ${CIRCLE_BRANCH}
       - restore_cache:
           keys:
             - app-{{ checksum "package.json" }}
@@ -52,7 +52,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command: echo {CURRENT_BRANCH}
+          command: echo {CIRCLE_BRANCH}
       - run:
           name: Installing AWS 
           working_directory: /
@@ -71,14 +71,14 @@ jobs:
       - run:
           name: Deploy to AWS S3
           command: |
-            if [ "${CURRENT_BRANCH}"] == "master" ]
+            if [ "${CIRCLE_BRANCH}"] == "master" ]
             then
-              aws --rerion ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
-            elif [ "${CURRENT_BRANCH}"] == "staging" ]
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_PRODUCTION} --delete
+            elif [ "${CIRCLE_BRANCH}"] == "staging" ]
             then
-              aws --rerion ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_BUCKET_STAGING} --delete
             else
-              aws --rerion ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
+              aws --region ${AWS_REGION} s3 sync ~/repo/build s3://${AWS_DEV_BUCKET} --delete
             fi
 
   deploy-to-aws-cloudfront:
@@ -89,7 +89,7 @@ jobs:
       - checkout
       - run:
           name: Show current branch
-          command: echo {CURRENT_BRANCH}
+          command: echo {CIRCLE_BRANCH}
       - run:
           name: Installing AWS 
           working_directory: /
@@ -108,11 +108,11 @@ jobs:
       - run:
           name: Deploy to AWS Cloudfront
           command: |
-            aws configure set preview.cloudfront 
-            if [ "${CURRENT_BRANCH}"] == "master" ]
+            aws configure set preview.cloudfront true
+            if [ "${CIRCLE_BRANCH}"] == "master" ]
             then
               aws cloudfront create-invalidation --distribution-id ${PRODUCTION_DISTRIBUTION_ID} --paths /\*
-            elif [ "${CURRENT_BRANCH}"] == "staging" ]
+            elif [ "${CIRCLE_BRANCH}"] == "staging" ]
             then
               aws cloudfront create-invalidation --distribution-id ${STAGING_DISTRIBUTION_ID} --paths /\*
             else
