--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,73 +1,67 @@
 version: 2.1
 
-# orbs:
-#   node: circleci/node@4.7
+executors:
+  app-executor:
+    docker:
+       - image: cimg/node:18.8.0
+    working_directory: ~/repo    
 
-# jobs:
-#   build-and-test:
-#     executor:
-#       name: node/default
-#     steps:
-#       - checkout
-#       - node/install-packages:
-#           pkg-manager: npm
-#       - run: npm install
-#           # command: npm install
-#           # name: install
-#       - run: npm test        
-#           # command: npm test
-#           # name: test
-# workflows:
-#   build-and-test:
-#     jobs: 
-#       - build-and-test
+aliases:
+  - &show-current-branch-name
+    run:
+      name: Show current branch
+      command: echo ${CIRCLE_BRANCH}
+  - &restore-cache
+    restore_cache:
+      keys:
+        - app-{{ checksum "package.json" }}
+        - app-
+  - &install-dependencies
+    run:
+      name: Install dependencies
+      command: npm install
+  - &save-cache
+    save_cache:
+      paths:
+        - node_modules
+      key: app-({ checksum "package.json" })
+  - &install-aws-cli
+    run:
+      name: Installing AWS 
+      working_directory: /
+      command: |
+        sudo apt-get -y -qq update
+        sudo apt-get install -y awscli
+        sudo apt-get install -y python3-pip python-dev build-essential
+  - &build-project
+    run:
+      name: Build Project
+      command: |
+        npm install
+        npm run build
+        cd build 
+        zip ../build.zip -r * .[^.]*
+        echo "Build successful"
+
+
 
 jobs:
   build: 
-    docker:
-       - image: cimg/node:18.8.0
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo ${CIRCLE_BRANCH}
-      - restore_cache:
-          keys:
-            - app-{{ checksum "package.json" }}
-            - app-
-      - run:
-          name: Install dependencies
-          command: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: app-({ checksum "package.json" })
+      - *show-current-branch-name
+      - *restore-cache
+      - *install-dependencies
+      - *save_cache
 
   deploy-to-aws-s3:
-    docker:
-      - image: cimg/node:18.8.0
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo {CIRCLE_BRANCH}
-      - run:
-          name: Installing AWS 
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python3-pip python-dev build-essential
-      - run:
-          name: Build Project
-          command: |
-            npm install
-            npm run build
-            cd build 
-            zip ../build.zip -r * .[^.]*
-            echo "Build successful"
+      - *show-current-branch-name
+      - *install-aws-cli
+      - *build-project
       - run:
           name: Deploy to AWS S3
           command: |
@@ -82,29 +76,12 @@ jobs:
             fi
 
   deploy-to-aws-cloudfront:
-    docker:
-      - image: cimg/node:18.8.0
-    working_directory: ~/repo
+    executor: app-executor
     steps:
       - checkout
-      - run:
-          name: Show current branch
-          command: echo {CIRCLE_BRANCH}
-      - run:
-          name: Installing AWS 
-          working_directory: /
-          command: |
-            sudo apt-get -y -qq update
-            sudo apt-get install -y awscli
-            sudo apt-get install -y python3-pip python-dev build-essential
-      - run:
-          name: Build Project
-          command: |
-            npm install
-            npm run build
-            cd build 
-            zip ../build.zip -r * .[^.]*
-            echo "Build successful"
+      - *show-current-branch-name
+      - *install-aws-cli
+      - *build-project
       - run:
           name: Deploy to AWS Cloudfront
           command: |
