--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,8 @@ aliases:
         zip ../build.zip -r * .[^.]*
         echo "Build successful"
 
-
-
 jobs:
+
   build: 
     executor: app-executor
     steps:
@@ -54,6 +53,16 @@ jobs:
       - *restore-cache
       - *install-dependencies
       - *save-cache
+
+  linting: 
+    executor: app-executor
+    steps:
+      - checkout
+      - *show-current-branch-name
+      - *restore-cache
+      - run:
+          name: Run linting
+          command: npm run lint
 
   deploy-to-aws-s3:
     executor: app-executor
@@ -97,12 +106,22 @@ jobs:
             fi
 
 workflows:
+
   build-and-deploy:
     jobs:
       - build
+      - linting:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - develop
+                - staging 
+                - master 
       - deploy-to-aws-s3:
           requires:
-            - build 
+            - linting 
           filters:
             branches:
               only:
