--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -140,6 +140,7 @@ workflows:
                 - master 
       - deploy-to-aws-s3:
           requires:
+            - linting
             - prettier 
           filters:
             branches:
