removed prettier from cci pipeline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -129,19 +129,19 @@ workflows:
                 - develop
                 - staging 
                 - master 
-      - prettier:
-          requires:
-            - build
-          filters:
-            branches:
-              only:
-                - develop
-                - staging 
-                - master 
+      # - prettier:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only:
+      #           - develop
+      #           - staging 
+      #           - master 
       - deploy-to-aws-s3:
           requires:
             - linting
-            - prettier 
+            # - prettier 
           filters:
             branches:
               only:
